ns/katchblog/katchblogService.yaml
apiVersion: v1
kind: Service
metadata:
  name: katchblog
  namespace: katchblog
  annotations:
    cert-gen.name: katchblog-cert
    cert-gen.namespace: katchblog
    cert-gen.dnsNames: "katchblog.com,www.katchblog.com,isso.katchblog.com,www.isso.katchblog.com"
    cert-gen.issuer.name: letsencrypt-prod
    cert-gen.issuer.kind: ClusterIssuer
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: katchblog
