ns/katchblog/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: katchblog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /*
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://katchblog.com"
spec:
  tls:
  - hosts:
    - katchblog.com
    - www.katchblog.com
    secretName: katchblog-cert
  rules:
  - host: katchblog.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: katchblog
          servicePort: 80
  - host: www.katchblog.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: katchblog
          servicePort: 80
  - host: isso.katchblog.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: isso
          servicePort: 80
